fix social button spacing

--- a/client/screen.css
+++ b/client/screen.css
@@ -65,9 +65,9 @@ table {
     left: 4px;
     font-size: 12px;
     width: 90%;
-    width: -webkit-calc(100% - 105px);
-    width: -moz-calc(100% - 105px);
-    width: calc(100% - 105px);
+    width: -webkit-calc(100% - 110px);
+    width: -moz-calc(100% - 110px);
+    width: calc(100% - 110px);
 }
 
 #names .name {
